<resources>
    <string name="app_name">Score Keeper</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="zero">0</string>
    <string name="points">Points</string>
    <string name="fouls">Fouls</string>
    <string name="plus_one_point">+1 Point</string>
    <string name="plus_one_foul">+1 Foul</string>
    <string name="reset">Reset</string>
</resources>
