<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/TeamTitleStyle"
                    android:text="@string/team_a" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/team_a_score"
                        style="@style/ScoreTextViewStyle"
                        android:text="@string/zero" />

                    <TextView
                        android:id="@+id/team_a_fouls"
                        style="@style/ScoreTextViewStyle"
                        android:text="@string/zero" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/team_a_score_text"
                        style="@style/PointsAndFoulsTextViewStyle"
                        android:text="@string/points" />

                    <TextView
                        android:id="@+id/team_a_fouls_text"
                        style="@style/PointsAndFoulsTextViewStyle"
                        android:text="@string/fouls" />
                </LinearLayout>

                <Button
                    style="@style/ButtonStyle"
                    android:onClick="addOnePointForTeamA"
                    android:text="@string/plus_one_point" />

                <Button
                    style="@style/ButtonStyle"
                    android:onClick="addOneFoulForTeamA"
                    android:text="@string/plus_one_foul" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/TeamTitleStyle"
                    android:text="@string/team_b" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/team_b_score"
                        style="@style/ScoreTextViewStyle"
                        android:text="@string/zero" />

                    <TextView
                        android:id="@+id/team_b_fouls"
                        style="@style/ScoreTextViewStyle"
                        android:text="@string/zero" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/team_b_score_text"
                        style="@style/PointsAndFoulsTextViewStyle"
                        android:text="@string/points" />

                    <TextView
                        android:id="@+id/team_b_fouls_text"
                        style="@style/PointsAndFoulsTextViewStyle"
                        android:text="@string/fouls" />
                </LinearLayout>

                <Button
                    style="@style/ButtonStyle"
                    android:onClick="addOnePointForTeamB"
                    android:text="@string/plus_one_point" />

                <Button
                    style="@style/ButtonStyle"
                    android:onClick="addOneFoulForTeamB"
                    android:text="@string/plus_one_foul" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:onClick="resetScore"
                android:text="@string/reset" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>